# AeroVision-V1-Server

./: .coverage  .dockerignore  .env.docker.example  .env.example  .gitignore  DOCKER.md  Dockerfile  README.md  __init__.py  aerovision_inference-1.0.0-py3-none-any.whl  aerovision_inference-1.2.0-py3-none-any.whl  docker-compose.cpu.yaml  docker-compose.yaml  main.py  pyproject.toml  pytest.ini
api/: __init__.py  deps.py
api/routes/: __init__.py  health.py  history.py  review.py
app/: __init__.py  main.py
app/api/: __init__.py  deps.py
app/core/: __init__.py  config.py  exceptions.py  logging.py  redis_client.py
app/inference/: __init__.py  factory.py  wrappers.py
app/schemas/: __init__.py  aircraft.py  airline.py  common.py  quality.py  registration.py  review.py
app/services/: __init__.py  _classifier_base.py  aircraft_service.py  airline_service.py  base.py  history_service.py  quality_service.py  review_service.py  (+1 more)
core/: __init__.py  config.py  logging.py
deployment_tests/: FIXES_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  OCR_Qwen_Integration_Guide.md  README.md  accuracy_test.py  compare_all_models.py  compare_results.py  icao_to_fullname_mapping.py  load_test.py  model_evaluation.py  production_comparison_report.py  registration_accuracy_test.py  registration_load_test.py  stress_test_hybrid_ocr.py  stress_test_hybrid_ocr_simple.py  test_accuracy_qwen.py  test_mapping.py  test_qwen_api_real.py
requirements/: base.txt  dev.txt  test.txt
schemas/: __init__.py  request.py  response.py
services/: __init__.py  review_service.py
tests/: conftest.py
(+19 files in other folders)
